--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "node dist/app.js",
         "dev": "nodemon src/app.ts",
-        "build": "tsc"
+        "build": "tsc",
+        "test": "echo \"No tests specified yet\" && exit 0"
     },
     "dependencies": {
         "@supabase/supabase-js": "^2.45.0",
