--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,3 @@
-PORT=4000
 NODE_ENV=development
-SUPABASE_URL=your_supabase_url
-SUPABASE_ANON_KEY=your_supabase_anon_key
+DATABASE_URL=postgresql://user:password@host/db?sslmode=require
+JWT_SECRET=your_jwt_secret
