--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
         "@types/jsonwebtoken": "^9.0.6",
         "@types/morgan": "^1.9.9",
         "@types/node": "^22.0.0",
+        "@types/pg": "^8.16.0",
         "nodemon": "^3.1.4",
         "ts-node": "^10.9.2",
         "typescript": "^5.5.4"
