Chore: Vercel Config (api/index.ts & vercel.json)

--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
         "@types/morgan": "^1.9.9",
         "@types/node": "^22.0.0",
         "@types/pg": "^8.16.0",
+        "@vercel/node": "^5.5.28",
         "nodemon": "^3.1.4",
         "ts-node": "^10.9.2",
         "typescript": "^5.5.4"
