--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,9 @@
 {
     "version": 2,
-    "name": "masjid-erp",
-    "builds": [
+    "rewrites": [
         {
-            "src": "backend/server.js",
-            "use": "@vercel/node"
-        },
-        {
-            "src": "frontend/**",
-            "use": "@vercel/static"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "backend/server.js"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "frontend/$1"
+            "source": "/api/(.*)",
+            "destination": "/backend/api/index.ts"
         }
     ]
 }
