--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,7 @@
-# Dependencies
-node_modules/
-package-lock.json
-yarn.lock
-
-# Environment variables
+node_modules
+dist
 .env
-.env.local
-.env.production
-.env.development
-
-# Logs
-logs/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# OS files
+.env.*
+!.env.example
 .DS_Store
-Thumbs.db
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# Build outputs
-dist/
-build/
-*.tsbuildinfo
-
-# Uploads
-uploads/
-temp/
-
-# Database
-*.sqlite
-*.db
-
-# Firebase
-firebase-adminsdk-*.json
-
-# Vercel
-.vercel
+SECRETS_TO_PASTE.txt
