Fix: Add Root Build Scripts for Vercel Monorepo

--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
     "workspaces": [
         "backend",
         "frontend"
-    ]
+    ],
+    "scripts": {
+        "install": "npm install",
+        "build": "cd frontend && npm run build",
+        "start": "cd frontend && npm run start"
+    }
 }
