--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
     },
     "dependencies": {
         "@supabase/supabase-js": "^2.45.0",
+        "@types/bcryptjs": "^2.4.6",
+        "bcryptjs": "^3.0.3",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
