Fix: Restructured for Vercel monorepo with proper builds config

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,23 @@
 {
     "version": 2,
-    "rewrites": [
+    "builds": [
         {
-            "source": "/api/(.*)",
-            "destination": "/backend/api/index.js"
+            "src": "frontend/package.json",
+            "use": "@vercel/next"
+        },
+        {
+            "src": "api/index.js",
+            "use": "@vercel/node"
         }
     ],
-    "functions": {
-        "backend/api/index.js": {
-            "memory": 1024,
-            "maxDuration": 10
+    "routes": [
+        {
+            "src": "/api/(.*)",
+            "dest": "/api/index.js"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/frontend/$1"
         }
-    }
+    ]
 }
